Fixed some little layout issues. layout med-high is now fully functional

--- a/src/bomWeatherGui/main.css
+++ b/src/bomWeatherGui/main.css
@@ -464,6 +464,9 @@
     -fx-max-height: 33px;
     -fx-min-height: 33px;
 }
+#waht{
+    -fx-background-color: white;
+}
 
 .export-button-bright{
 
